# OoT_Decompressor

./: Cargo.toml  README.md
.cargo/: config.toml
crate/decompress/: Cargo.toml
crate/decompress-cli/: Cargo.toml
crate/decompress-cli/src/: main.rs
crate/decompress/src/: lib.rs
src/: crc.rs  main.rs
