[package]
name = "decompress"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
arrayref = "0.3.8"
clap = { version = "4.5.13", features = ["derive"] }
itermore = { version = "0.7.1", features = ["array_chunks"] }
thiserror = "1.0.63"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", default-features = false }
