[package]
name = "decompress-cli"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
decompress = { path = "../decompress" }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", default-features = false }
